--- a/northwind.web.ui/northwind.web.ui.csproj
+++ b/northwind.web.ui/northwind.web.ui.csproj
@@ -6,6 +6,7 @@
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="cloudscribe.Pagination.Models" Version="1.0.5" />
+    <PackageReference Include="cloudscribe.Web.Navigation" Version="4.0.2" />
     <PackageReference Include="cloudscribe.Web.Pagination" Version="3.0.0" />
     <PackageReference Include="Humanizer" Version="2.7.9" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.0" />
@@ -15,8 +16,5 @@
   <ItemGroup>
     <ProjectReference Include="..\northwind.domain\northwind.domain.csproj" />
     <ProjectReference Include="..\northwind.services\northwind.services.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="views\Users\Index.cshtml" />
   </ItemGroup>
 </Project>
