--- a/northwind.web.ui/northwind.web.ui.csproj
+++ b/northwind.web.ui/northwind.web.ui.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\northwind.common\northwind.common.csproj" />
     <ProjectReference Include="..\northwind.domain\northwind.domain.csproj" />
     <ProjectReference Include="..\northwind.services\northwind.services.csproj" />
   </ItemGroup>
