--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,7 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# web files
+northwind.web.ui/wwwroot/reports/*
+northwind.web.ui/wwwroot/*.html
