--- a/northwind.web.ui/northwind.web.ui.csproj
+++ b/northwind.web.ui/northwind.web.ui.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="cloudscribe.Pagination.Models" Version="1.0.5" />
     <PackageReference Include="cloudscribe.Web.Navigation" Version="4.0.2" />
     <PackageReference Include="cloudscribe.Web.Pagination" Version="3.0.0" />
+    <PackageReference Include="DinkToPdf" Version="1.0.8" />
     <PackageReference Include="Humanizer" Version="2.7.9" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
@@ -16,6 +17,10 @@
   <ItemGroup>
     <ProjectReference Include="..\northwind.common\northwind.common.csproj" />
     <ProjectReference Include="..\northwind.domain\northwind.domain.csproj" />
+    <ProjectReference Include="..\northwind.reporting\northwind.reporting.csproj" />
     <ProjectReference Include="..\northwind.services\northwind.services.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\reports" />
   </ItemGroup>
 </Project>
